--- a/accounts/static/accounts/css/accounts.css
+++ b/accounts/static/accounts/css/accounts.css
@@ -76,6 +76,7 @@
 }
 
 .form-group input {
+    font-family: 'Montserrat', sans-serif;
     width: 100%;
     padding: 12px 15px 12px 35px;
     font-size: 14px;
