--- a/main/static/main/css/layout.css
+++ b/main/static/main/css/layout.css
@@ -1,4 +1,3 @@
-/* static/main/css/layout.css */
 body {
     margin: 0;
     padding: 0;
@@ -17,7 +16,7 @@ body {
     background: #FFFFFF;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     z-index: 1000;
-    padding: 50px 0 30px 0;
+    padding: 50px 0 50px 0;
 }
 
 .nav-container {
@@ -96,14 +95,13 @@ body {
 }
 
 .contact {
-    background: #f0f4f7;
-    padding: 50px 20px;
-    margin-top: 60px;
+    background: #6c7663;
+    padding-bottom: 30px;
     border-top: 1px solid rgba(120, 134, 107, 0.1);
 }
 
 .contact h2 {
-    color: #444;
+    color: white;
     font-family: 'Raleway', 'Montserrat', Arial, sans-serif;
     font-size: 28px;
     font-weight: 500;
@@ -120,20 +118,20 @@ body {
 .contact p {
     font-family: 'Raleway', 'Montserrat', Arial, sans-serif;
     font-size: 16px;
-    color: #666;
+    color: white;
     line-height: 1.8;
     margin: 10px 0;
 }
 
 .contact a {
-    color: #78866b;
+    color: white;
     text-decoration: none;
     font-weight: 400;
     transition: color 0.3s ease;
 }
 
 .contact a:hover {
-    color: #5c6d50;
+    color: white;
     text-decoration: underline;
 }
 
@@ -170,6 +168,24 @@ body {
     }
 
     .content {
-        padding-top: 120px; /* Увеличиваем отступ для мобильных */
+        padding-top: 120px;
     }
+}
+
+.content {
+    padding-top: 120px;
+}
+.nav-link.favorite-link i {
+    font-size: 23px; /* Размер такой же, как у других иконок */
+    transition: color 0.3s ease, transform 0.3s ease; /* Добавим анимацию */
+}
+
+.nav-link.favorite-link:hover i {
+    color: #5c6d50;
+    transform: scale(1.1); /* Лёгкое увеличение при наведении */
+}
+
+.nav-link.active.favorite-link i {
+    color: #5c6d50;
+    font-weight: 700;
 }
