--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -40,6 +40,13 @@
                     {% endif %}
                 </li>
                 <li class="nav-item">
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'favorites' %}" class="nav-link favorite-link {% if request.path == '/favorites/' %}active{% endif %}">
+                            <i class="far fa-heart" aria-hidden="true"></i>
+                        </a>
+                    {% endif %}
+                </li>
+                <li class="nav-item">
                     <a href="{% url 'cart' %}" class="nav-link {% if request.path == '/cart/' %}active{% endif %}">
                         <i class="fas fa-shopping-bag" aria-hidden="true"></i>
                     </a>
@@ -55,8 +62,8 @@
     <section class="contact">
         <h2>Связаться с нами</h2>
         <p>Мы находимся в Казани. Также доступна доставка почтой по всей России.</p>
-        <p><i class="fab fa-whatsapp" style="color: #78866b;"></i> +7 937 622-73-47</p>
-        <p><i class="fab fa-instagram" style="color: #78866b;"></i> <a href="https://www.instagram.com/obnimi.kids/">obnimi.kids</a></p>
+        <p><i class="fab fa-whatsapp" style="color: white;"></i> +7 937 622-73-47</p>
+        <p><i class="fab fa-instagram" style="color: white;"></i> <a href="https://www.instagram.com/obnimi.kids/">obnimi.kids</a></p>
     </section>
     {% block scripts %}{% endblock %}
 </body>
